# machine-yearning

./: Dockerfile  README.md  pyproject.toml
app/requests/: cli_examples.sh  py_examples.py
app/v1/: classes.py  run.py  schemas.py  tests.py
machine_yearning/runner/: run.py
