[tool.poetry]
name = "machine-yearning"
version = "0.1.0"
description = ""
authors = ["Caner Mercan <mercancaner@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pathlib = "^1.0.1"
requests = "^2.32.3"
httpx = "^0.28.1"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
    